Agregando un segundo parrafo al post

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
 	<h2>Este es mi primer blog</h2>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id minus quaerat nobis assumenda ab, quam dolorum perferendis a vitae consectetur, blanditiis dolores veniam impedit, totam, reiciendis nam asperiores porro quisquam.</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 </body>
 </html>
