--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<h2>Este es mi primer blog</h2>
+	<h2>Titulo primer post</h2>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id minus quaerat nobis assumenda ab, quam dolorum perferendis a vitae consectetur, blanditiis dolores veniam impedit, totam, reiciendis nam asperiores porro quisquam.</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+	<h2>Titulo segundo post</h2>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 </body>
 </html>
