--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<h2>Titulo 1er post</h2>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id minus quaerat nobis assumenda ab, quam dolorum perferendis a vitae consectetur, blanditiis dolores veniam impedit, totam, reiciendis nam asperiores porro quisquam.</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-	<h2>Titulo 2do post</h2>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+	<header>
+		Esta es la cabecera de mi proyecto
+	</header>
+	<!-- /header -->
+	<div class="container">
+		<h2>Titulo 1er post</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id minus quaerat nobis assumenda ab, quam dolorum perferendis a vitae consectetur, blanditiis dolores veniam impedit, totam, reiciendis nam asperiores porro quisquam.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+		<h2>Titulo 2do post</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+	</div>
 </body>
 </html>
