Estructura inicial de la cabecera

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		Esta es la cabecera de mi proyecto
+		Esta es la cabecera final de mi proyecto 
 	</header>
 	<!-- /header -->
 	<div class="container">
