Modifique la cabecera y el color del texto

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		Esta es la cabecera final de mi proyecto <span>la practica hace al maestro</span> 
+		My blog de cabecera <span>la practica hace al maestro</span> 
 	</header>
 	<!-- /header -->
 	<div class="container">
