--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		Esta es la cabecera final de mi proyecto <span>la practica hace al maestro</span> 
+		My Blog Maestro <span>la practica hace al maestro</span> 
 	</header>
 	<!-- /header -->
 	<div class="container">
@@ -18,6 +18,7 @@
 		<h2>Titulo 2do post</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora cupiditate iusto ab soluta in tempore fugiat voluptas nihil eius sunt natus suscipit explicabo adipisci quaerat, cumque, fugit culpa voluptates aliquid!</p>
+		<p>Suscribete y dale like</p>
 	</div>
 </body>
 </html>
