--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>My Blogpost</title>
+	<title>My Blogpost - Bienvenido </title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
